--- a/stock_price_dashboard.ipynb
+++ b/stock_price_dashboard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMWNSjnxchsLLQH5olBV85",
+      "authorship_tag": "ABX9TyMHSyHNKWXJzBzYByTLSCoV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,28 +30,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install yfinance"
-      ],
-      "metadata": {
-        "id": "dysZSKa8enxD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install mplfinance"
-      ],
-      "metadata": {
-        "id": "AHrj9Wzze5Og"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "---\n",
         "title: Finance dashboard\n",
         "description: Dashboard with financial data\n",
@@ -65,10 +43,24 @@
         "---"
       ],
       "metadata": {
-        "id": "E3WiBBRbuWo5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "E3WiBBRbuWo5",
+        "outputId": "f8302db5-6658-49ab-e802-92ef5bbc371e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_1176/3973829775.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ---\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -97,7 +89,7 @@
       "metadata": {
         "id": "AOlDpveDe995"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -117,7 +109,7 @@
       "metadata": {
         "id": "MvF4x_aefDPd"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -139,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r2dqlvxyfFSM",
-        "outputId": "8120a3c7-8f73-439a-8e11-aaa7c7d9a131"
+        "outputId": "b3a0d1d9-acce-461f-9fbe-00561937bf73"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +161,7 @@
       "metadata": {
         "id": "zUB3q244fI0s"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -192,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Od-cBCxRfMPl",
-        "outputId": "2cfb4e09-b005-4c99-e18f-6027bd70c1f1"
+        "outputId": "387de99a-5e64-495c-a9a4-484cdc432c40"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,9 +218,9 @@
           "height": 237
         },
         "id": "hYmDsTHrfVAn",
-        "outputId": "544a60af-0d6c-466e-836c-25076bb05b98"
+        "outputId": "ae7ee1e6-567b-4bea-c489-cd4a9ec20234"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +244,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f67beeee-55cd-40de-803d-6e4ecee0a35b\">\n",
+              "  <div id=\"df-4907899e-7a7b-4018-a2fa-13887d91f611\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,7 +337,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f67beeee-55cd-40de-803d-6e4ecee0a35b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4907899e-7a7b-4018-a2fa-13887d91f611')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -396,12 +388,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f67beeee-55cd-40de-803d-6e4ecee0a35b button.colab-df-convert');\n",
+              "          document.querySelector('#df-4907899e-7a7b-4018-a2fa-13887d91f611 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f67beeee-55cd-40de-803d-6e4ecee0a35b');\n",
+              "          const element = document.querySelector('#df-4907899e-7a7b-4018-a2fa-13887d91f611');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -424,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -448,9 +440,9 @@
           "height": 492
         },
         "id": "izR3DwRxfp3g",
-        "outputId": "fcaf4db0-3eb5-4ab1-ab41-503290076488"
+        "outputId": "78c900f6-292e-4a82-a8eb-6bfc06dddcc5"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
